--- a/package.json
+++ b/package.json
@@ -3,30 +3,24 @@
   "private": true,
   "description": "Boilerplate project template for Linear SDK typescript project",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "dist/index.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "repository": "https://github.com/piersCraft/linear-sdk-bplate.git",
   "author": "Piers Anderson <piers@craft.co>",
   "license": "MIT",
   "scripts": {
     "start": "node --loader ts-node/esm src/index.ts",
-    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
+    "dev": "node --loader ts-node/esm src/index.ts",
     "build": "tsc",
-    "test": "jest",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "clean": "rm -rf dist"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.15.30",
-    "@typescript-eslint/eslint-plugin": "^8.33.1",
-    "@typescript-eslint/parser": "^8.33.1",
-    "eslint": "^9.28.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.10",
-    "prettier": "^3.5.3",
-    "ts-jest": "^29.3.4",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
+    "@types/node": "^20.11.0",
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@linear/sdk": "^42.0.0",
